--- a/trunk/perldoc/ko/perl/5.10/perlop.pod
+++ b/trunk/perldoc/ko/perl/5.10/perlop.pod
@@ -4498,11 +4498,6 @@ Fortunately, it's usually correct for ambiguous cases.
 “¾ö“Ã» “±ä “ÅØ“½º“Æ®“°¡ “µË“´Ï“´Ù.
 “Ãâ“·Â“Àº “Ãß“Á¤“±â“µÎ“°í “Åõ“Ç¥“¿¡ “ÀÇ“ÇØ “°á“Á¤“µÇ“¾î“Áú“¶§, “°á“°ú“´Â “¾ö“¹Ð“ÇÏ“°Ô
 “¿¹“Ãø“ÇÒ “¼ö “¾ø“½À“´Ï“´Ù.
-
-“ªÛ“ªÈ“ªó“ªÉ“ªÎ“íÞ“ùê“¡¢“é©“áÈ“ªÈ“¡¢“«Þ“«Ã“«Á“ª¹“ªë“ñé“ª«“ªÃ“ª³“ªä“ÓÞ“ª«“ªÃ“ª³“ªÎ“Êà“ªË“Íö“ÛÜ“ªò“ùß“ªÞ“ªÊ“ª¤“¡¢
-“õÌ“ªâ“íþ“ª¤“«Æ“«­“«¹“«È“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“õó“Õô“ªÏ’È¯“Ì¸“îÜ“ªÊ“õÏ“ïÒ“Ðï“ªò“ªè“ªë“÷á“øù“ªË“ªè“ªÃ“ªÆ“Ì½“ïÒ“ªµ“ªì“ªë“ªÎ“ªÇ“¡¢“Ì¿“Íý“ªÏ’¸·“ÚË“ªË“ªÏ
-“åø“ö´“ªÇ“ª­“ªÞ“ª»“ªó“¡£
 “¿î“ÁÁ“°Ô“µµ, “¸ð“È£“ÇÑ “°æ“¿ì“¿¡“µµ “ÀÏ“¹Ý“Àû“À¸“·Î“´Â “¸Â“½À“´Ï“´Ù. 
 
 =item the replacement of C<s///>
@@ -4542,8 +4537,8 @@ and interpolation happens (almost) as with C<qq//> constructs.
 
 =end original
 
-C<\Q>, C<\U>, C<\u>, C<\L>, C<\l> C<\E> “ªÎ’½è“×â“ªÈ“î÷“ËÒ“ª¬ C<qq//> “Ï°“ðã“ªÈ
-(“ªÛ“ªÈ“ªó“ªÉ)“ÔÒ“ª¸“ªè“ª¦“ªË“ÑÃ“ª³“ªê“ªÞ“ª¹“¡£
+C<\Q>, C<\U>, C<\u>, C<\L>, C<\l> C<\E> “ÀÇ “Ã³“¸®“¿Í “Àü“°³“°¡ C<qq//> “±¸“Á¶“¿Í
+(“°Å“ÀÇ) “°°“°Ô “ÀÏ“¾î“³³“´Ï“´Ù.
 
 =begin original
 
@@ -4569,13 +4564,13 @@ even though the same text in C<qq//> gives interpolation of C<\c@>.
 Moreover, inside C<(?{BLOCK})>, C<(?# comment )>, and
 a C<#>-comment in a C<//x>-regular expression, no processing is
 performed whatsoever.  This is the first step at which the presence
-of the C<//x> modifier is relevant.
+    of the C<//x> modifier is relevant.
 
 =end original
 
-“ªµ“ªé“ªË“¡¢C<(?{BLOCK})>, C<(?# comment )>, C<//x> “ïá“Ð®“øú“úÞ“ªÇ“ªÎ C<#> “ªÎ
-“«³“«á“«ó“«È“ªÎ“ñé“ªÇ“ªÏ“¡¢“ªÉ“ªÎ“ªè“ª¦“ªÊ’½è“×â“ªâ“ú¼“ªï“ªì“ªÞ“ª»“ªó“¡£
-“ª³“ªì“ªÏ C<//x> “áó“ãÞ“í­“ª¬“ç¯“úÂ“ªò‘Óë“ª¨“ªë“õÌ“ôø“ªÎ“«¹“«Æ“«Ã“«×“ªÇ“ª¹“¡£
+“°Å“±â“¿¡ C<(?{BLOCK})>, C<(?# comment )>, C<//x> “Á¤“±Ô“Ç¥“Çö“¿¡“¼­“ÀÇ C<#> “ÀÇ
+“ÄÚ“¸à“Æ® “¾È“¿¡“¼­“´Â, “¾î“¶°“ÇÑ “Ã³“¸®“µµ “¼ö“Çà“ÇÏ“Áö “¾Ê“½À“´Ï“´Ù.
+“ÀÌ“°Í“Àº C<//x> “¼ö“½Ä“ÀÚ“°¡ “¿µ“Çâ“À» “ÁÖ“´Â “Ã¹“¹ø“Â° “Àý“Â÷“ÀÔ“´Ï“´Ù.
 
 =begin original
 
@@ -4591,14 +4586,14 @@ the result is not predictable.
 
 =end original
 
-“«Ñ“«¿’¡¼“«ó‘ÄÚ“ªÎ“î÷“ËÒ“ªÇ“ªÏ“ª¤“ª¯“ªÄ“ª«“÷å“â¨“ªÊ“ÔÑ“íÂ“ªò“ª·“ªÞ“ª¹:
-C<$|>, C<$(>, C<$)>, C<@+>, C<@-> “ªÏ“î÷“ËÒ“ªµ“ªì“ªº“¡¢
-C<$var[SOMETHING]> “ªÏ(“ª¤“ª¯“ªÄ“ª«“ªÎ“ì¶“ªÊ“ªë“õÏ“ïÒ“Ðï“ªË“ªè“ªÃ“ªÆ)“ÛÕ“Öª“ªÎ“é©“áÈ“ª«
-C<$var> “ªÎ“ý­“ªË“ïá“Ð®“øú“úÞ“ª¬’Â³“ª¤“ªÆ“ª¤“ªë“ªÎ“ª«“ª¬“÷á“øù“ªµ“ªì“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ C<${arr[$bar]}> “ª¬“øµ“××“ªË“ªÊ“ªë“ªÈ“ª³“ªí“ªÇ“ª¹: C</${arr[0-9]}/> “ªÏ
-“ÛÕ“Öª“é©“áÈ C<-9> “ªÈ“ª·“ªÆ“ú°’¼á“ªµ“ªì“¡¢C</$arr[0-9]/> “ªÎ“íÞ“ùê“ªÎ“ªè“ª¦“ªË C<$arr> “ªÎ“ý­“ªË
-‘Êý“ö·“ª¬’Â³“ª¤“ªÆ“ª¤“ªë“ªè“ª¦“ªÊ“ïá“Ð®“øú“úÞ“ªÈ“ª·“ªÆ“ªÏ“ú°’¼á“ªµ“ªì“ªÞ“ª»“ªó“¡£
-“ì¶“ªÊ“ªÃ“ª¿“õÏ“ïÒ“Ðï“ªË“ªè“ªÃ“ªÆ“÷á“øù“ªµ“ªì“ªë“ª³“ªÈ“ª¬“ª¢“ªë“ªÎ“ªÇ“¡¢“Ì¿“Íý“ªÏ“åø“ö´“ªÇ“ª­“ªÞ“ª»“ªó“¡£
+“ÆÐ“ÅÏ “¾È“ÀÇ “Àü“°³“¿¡“¼­“´Â “¸î“°³“ÀÎ“°¡ “Æ¯“¼ö“ÇÑ “µ¿“ÀÛ“À» “ÇÕ“´Ï“´Ù:
+C<$|>, C<$(>, C<$)>, C<@+>, C<@-> “Àº “Àü“°³“µÇ“Áö “¾Ê“°í
+C<$var[SOMETHING]> “´Â(“¸î“°³“ÀÎ“°¡ “´Ù“¸¥ “Ãß“Á¤“±â“¿¡ “ÀÇ“ÇØ) “¹è“¿­“ÀÇ “¿ä“¼Ò“ÀÎ“°¡
+C<$var> “ÀÇ “µÚ“¿¡ “Á¤“±Ô“Ç¥“Çö“ÀÌ “µû“¶ó“¿À“´Â “°Í“ÀÎ“°¡“¸¦ “Åõ“Ç¥“ÇÕ“´Ï“´Ù.
+“ÀÌ“°Í“Àº C<${arr[$bar]}> “°¡ “Æí“¸®“ÇØ“Áö“´Â “Á¡“ÀÔ“´Ï“´Ù.  C</${arr[0-9]}/> “Àº
+“¹è“¿­“¿ä“¼Ò C<-9> “·Î “ÇØ“¼®“µÇ“°í, C</$arr[0-9]/>“ÀÇ “°æ“¿ì“¿¡ “ÀÇ“ÇØ C<$arr> “ÀÇ “µÚ“¿¡
+“¼ý“ÀÚ“°ª“ÀÌ “µû“¶ó“¿À“´Â “°Í“°ú “°°“Àº “Á¤“±Ô“Ç¥“Çö“À¸“·Î “ÇØ“¼®“µÇ“Áö “¾Ê“½À“´Ï“´Ù.
+“´Ù“¸¥ “Ãß“Á¤“±â“¿¡ “ÀÇ“ÇØ “Åõ“Ç¥“µÇ“´Â “°Í“ÀÌ “ÀÖ“¾î“¼­ “°á“°ú“´Â “¿¹“Ãø“ÇÒ “¼ö “¾ø“½À“´Ï“´Ù.
 
 =begin original
 
@@ -4614,15 +4609,13 @@ alphanumeric char, as in:
 
 =end original
 
-C<\\> “ªò’½è“×â“ª·“ªÊ“ª¤“ª³“ªÈ“ªË“ªè“ªê“¡¢“ý­’½è“×â“ª·“ª¿“«Æ“«­“«¹“«È“ªË“÷å“ïÒ“ªÎ“ð¤“ùÚ“ª¬“ª¢“ªê“ªÞ“ª¹“¡£
-“«Ç“«ê“«ß“«¿“ª¬ C</> “ªÎ“íÞ“ùê“¡¢“ª³“ªÎ“«¹“«Æ“«Ã“«×“ªÎ“Ì¿“Íý“ªÈ“ª·“ªÆ C<\/> “ªò“Ôð“ªë“ª³“ªÈ“ªÏ
-“ªÇ“ª­“ªÞ“ª»“ªó“¡£
-C</> “ªÏ“ïá“Ð®“øú“úÞ“ªò“ðû“ªï“ªé“ª»“¡¢C<\/> “ªÏ“îñ“ªÎ“«¹“«Æ“«Ã“«×“ªÇ C</> “ªË“î÷“ËÒ“ªµ“ªì“¡¢
-C<\\/> “ªÏ“ª½“ªÎ“ªÞ“ªÞ‘²Ð“ªµ“ªì“ªÞ“ª¹“¡£
-C</> “ªÏ“ïá“Ð®“øú“úÞ“ªÎ“ñé“ªÇ“ªÏ C<\/> “ªÈ“Ôõ’²Á“ªÊ“ªÎ“ªÇ“¡¢“ª³“ªì“ªÏ“ª¿“ªÞ“ª¿“ªÞ“«Ç“«ê“«ß“«¿“ª¬
-“ïá“Ð®’¸¡“ßã“«¨“«ó“«¸“«ó“ªË“ªÈ“ªÃ“ªÆ“÷å“Ü¬“ªÊ“Ùþ“í®“ªÎ“íÞ“ùê“¡¢“ªÄ“ªÞ“ªê C<s*foo*bar*>,
-C<m[foo]>, C<?foo?> “ªÎ“ªè“ª¦“ªÊ“íÞ“ùê“¡¢“ª¢“ªë“ª¤“ªÏ“ì¤“ù»“ªÎ“ªè“ª¦“ªË“çÈ‘Êý“í®“ªÇ“ªÊ“ª±“ªì“ªÐ“¡¢
-“Ùý“ð¹“ªË“ªÏ“ªÊ“ªê“ªÞ“ª»“ªó:
+C<\\> “¸¦ “Ã³“¸®“ÇÏ“Áö “¾Ê“´Â “°Í“¿¡ “µû“¶ó, “ÈÄ“Ã³“¸®“ÇÑ “ÅØ“½º“Æ®“¿¡ “Æ¯“Á¤“ÀÇ “Á¦“ÇÑ“ÀÌ “ÀÖ“½À“´Ï“´Ù.
+“±¸“ºÐ“ÀÚ“°¡ C</> “ÀÇ “°æ“¿ì, “ÀÌ “½º“ÅÜ“ÀÇ “°á“°ú“·Î“½á C<\/>“¸¦ “¾ò“À» “¼ö “¾ø“½À“´Ï“´Ù.
+C</> “´Â “Á¤“±Ô“Ç¥“Çö“À» “³¡“³»“°í, C<\/>“´Â “¾Õ“ÀÇ “½º“ÅÜ“¿¡“¼­ C</>“¿¡ “Àü“°³“µÇ“¾î
+C<\\/>“´Â “±×“´ë“·Î “³²“°Ô “µË“´Ï“´Ù.
+C</> “´Â “Á¤“±Ô“Ç¥“Çö “¾È“¿¡“¼­“´Â C<\/> “¿Í “°°“À¸“¹Ç, “ÀÌ“°Í“Àº “°¡“²û “±¸“ºÐ“ÀÚ“°¡
+“Á¤“±Ô“Ç¥“Çö “¿£“Áø“¿¡“¼­ “Æ¯“º°“ÇÑ “¹®“ÀÚ“ÀÎ “°æ“¿ì, “Áï C<s*foo*bar*>,
+C<m[foo]>, C<?foo?> “°°“Àº “°æ“¿ì, “È¤“Àº “¾Æ“·¡“¿Í “°°“Àº “¿µ“¼ý“ÀÚ“°¡ “¾Æ“´Ï“¸é “¹®“Á¦“¾ø“½À“´Ï“´Ù.
 
   m m ^ a \s* b mmx;
 
@@ -4636,10 +4629,10 @@ non-whitespace choices.
 
 =end original
 
-“ß¾“ÑÀ“ªÎ“ïá“Ð®“øú“úÞ“ªÇ“ªÏ“¡¢’Àâ“Ù¥“ªÎ“ª¿“ªá“ªË“ëò’¿Þ“îÜ“ªË“ªï“ª«“ªê“ªË“ª¯“ª¯“ª·“ªÆ“ª¤“ªÞ“ª¹“ª¬“¡¢
-“«Ç“«ê“«ß“«¿“ªÏ C<m> “ªÇ“¡¢“áó“ãÞ“í­“ªÏ C<mx> “ªÇ“¡¢“«Ç“«ê“«ß“«¿“ªò“ö¢“ªê“ð¶“ª¤“ª¿“ý­“ªÎ
-“ïá“Ð®“øú“úÞ“ªÏ C<m/ ^ a \s* b /mx> “ªÈ“ÔÒ“ª¸“ªÇ“ª¹“¡£
-“«Ç“«ê“«ß“«¿“ªò“çÈ‘Êý“í®“ªä“Íö“ÛÜ“ªÇ“ªÊ“ª¤“ªâ“ªÎ“ªË“ð¤“ùÚ“ª¹“ªë“ªÙ“ª­“ªÇ“ª¢“ªë“×â“ë¦“ªÏ“ÜÜ‘Êý“ª¢“ªê“ªÞ“ª¹“¡£
+“À§“ÀÇ “Á¤“±Ô“Ç¥“Çö“¿¡“¼­“´Â “¼³“¸í“À» “À§“ÇØ “ÀÇ“µµ“Àû“À¸“·Î “¾Ë“±â“¾î“·Æ“°Ô “ÇØ“³õ“¾Ò“Áö“¸¸,
+“±¸“ºÐ“ÀÚ“´Â C<m>“ÀÌ“°í, “¼ö“½Ä“ÀÚ“´Â C<mx>“ÀÌ“¸ç, “±¸“ºÐ“ÀÚ“¸¦ “»« “µÚ“ÀÇ
+“Á¤“±Ô“Ç¥“Çö“Àº C<m/ ^ a \s* b /mx> “¿Í “°°“½À“´Ï“´Ù.
+“±¸“ºÐ“ÀÚ“¸¦ “¿µ“¼ý“ÀÚ“³ª “°ø“¹é“ÀÌ “¾Æ“´Ñ “°Í“¿¡ “Á¦“ÇÑ“ÇØ“¾ß“ÇÒ “ÀÌ“À¯“´Â “¿©“·¯“°¡“Áö“°¡ “ÀÖ“½À“´Ï“´Ù.
 
 =back
 
@@ -4650,13 +4643,13 @@ which are processed further.
 
 =end original
 
-“ª³“ªì“ªÏ“ïá“Ð®“øú“úÞ“ì¤“èâ“ªÎ“îï“ªÆ“ªÎ“Ï°“ðã“ªË“ªÈ“ªÃ“ªÆ“õÌ“ý­“ªÎ“«¹“«Æ“«Ã“«×“ªÇ“ª¹“¡£
-“ïá“Ð®“øú“úÞ“ªÏ“ªµ“ªé“ªË’½è“×â“ª¬’Â³“ª­“ªÞ“ª¹“¡£
+“ÀÌ“°Í“Àº “Á¤“±Ô“Ç¥“Çö “ÀÌ“¿Ü“ÀÇ “¸ð“µç “±¸“Á¶“¿¡“¼­ “¸¶“Áö“¸·“ÀÇ “½º“ÅÜ“ÀÔ“´Ï“´Ù.
+“Á¤“±Ô“Ç¥“Çö“Àº “°Å“±â“¿¡ “Ã³“¸®“°¡ “µ¡“ºÙ“½À“´Ï“´Ù.
 
 =item parsing regular expressions
 X<regexp, parse>
 
-(“ïá“Ð®“øú“úÞ“ªÎ“«Ñ’¡¼“«¹)
+(“Á¤“±Ô“Ç¥“Çö“ÀÇ “ÆÐ“½º)
 
 =begin original
 
@@ -5085,8 +5078,8 @@ filters compressed arguments through B<gzip>:
 
 =end original
 
-“ª³“ª³“ªË“«Ñ“«¤“«×“«³“«Þ“«ó“«É“ªò“öÇ“ª¯“ª³“ªÈ“ªâ“õó‘À´“ªÞ“ª¹“¡£
-“ÖÇ“ª¨“ªÐ“¡¢“ì¤“ù»“ªÏ’°µ“õê“ªµ“ªì“ª¿“ìÚ‘Êý“ªò“í»“ÔÑ“îÜ“ªË B<gzip> “ªÎ“«Õ“«£“«ë“«¿“ªË“÷×“ª·“ªÞ“ª¹:
+“¿©“±â“¿¡ “ÆÄ“ÀÌ“ÇÁ“Ä¿“¸Ç“µå“¸¦ “³Ö“À» “¼ö“µµ “ÀÖ“½À“´Ï“´Ù.
+“¿¹“¸¦ “µé“¸é, “¾Æ“·¡“´Â “¾Ð“Ãà“µÈ “ÀÎ“¼ö“¸¦ “ÀÚ“µ¿“Àû“À¸“·Î B<gzip> “ÀÇ “ÇÊ“ÅÍ“·Î “Åë“ÇÕ“´Ï“´Ù.
 
     @ARGV = map { /\.(gz|Z)$/ ? "gzip -dc < $_ |" : $_ } @ARGV;
 
@@ -5097,8 +5090,8 @@ Getopts modules or put a loop on the front like this:
 
 =end original
 
-“«¹“«¯“«ê“«×“«È“ªË“«¹“«¤“«Ã“«Á“ªò“Ô¤“ª·“ª¿“ª¤“ªÎ“ªÇ“ª¢“ªì“ªÐ“¡¢Getopts “«â“«¸“«å’¡¼“«ë“ªò
-“ÞÅ“ª¦“ª³“ªÈ“ªâ“ªÇ“ª­“ªÞ“ª¹“ª·“¡¢’¼Â“ð·“ªÎ’½è“×â“ªÎ“îñ“ªË“ªÎ“ªè“ª¦“ªÊ“«ë’¡¼“«×“ªò“öÇ“ª¯“ª³“ªÈ“ªâ“ªÇ“ª­“ªÞ“ª¹“¡£
+“½º“Å©“¸³“Æ®“¿¡ “½º“À§“Ä¡“¸¦ “³Ñ“±â“°í “½Í“´Ù“¸é Getopts “¸ð“µâ“À»
+“»ç“¿ë“ÇÏ“´Â “°Í“µµ “µÇ“¸ç, “½Ç“Á¦ “Ã³“¸® “Àü“¿¡“¿Í “°°“Àº “·ç“ÇÁ“¸¦ “µÎ“´Â “°Í“µµ “°¡“´É“ÇÕ“´Ï“´Ù.
 
     while ($_ = $ARGV[0], /^-/) {
 	shift;
@@ -5120,10 +5113,10 @@ If you call it again after this, it will assume you are processing another
 
 =end original
 
-“«·“«ó“«Ü“«ë <> “ª¬“«Õ“«¡“«¤“«ë“ªÎ“õÌ“ý­“ªÇ C<undef> “ªò“Ú÷“ª¹“ªÎ“ªÏ“ìé“Óø“ª­“ªê“ªÇ“ª¹“¡£
-“ª½“ªÎ“ª¢“ªÈ“ªÇ“ªâ“ª¦“ìé“Óø“û¼“ªÓ“õó“ª¹“ªÈ“¡¢“ãæ“ª¿“ªË“Ü¬“ªÎ @ARGV “ªò’½è“×â“ª¹“ªë“ªâ“ªÎ“ªÈ“ªß“ªÊ“ªµ“ªì“¡¢
-“ª½“ªÎ“ãÁ“ªË @ARGV “ªò“àâ“ïÒ“ª·“ªÊ“ªª“ª·“ªÆ“ª¤“ªÊ“ª¤“ªÈ“¡¢STDIN “ª«“ªé“ªÎ“ìý“Õô“ªò
-’ÆÉ“ªß’¹þ“ªà“ª³“ªÈ“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
+“½É“º¼ <> “°¡ “ÆÄ“ÀÏ“ÀÇ “¸¶“Áö“¸·“¿¡“¼­ C<undef> “¸¦ “¹Ý“È¯“ÇÏ“¤¤ “°Í“¸¸ “ÇÑ“¹ø “»Ó“ÀÔ“´Ï“´Ù.
+“±× “µÚ“¿¡ “ÇÑ“¹ø “´õ “ºÎ“¸£“¸é, “»õ“·Î“¿î “º°“µµ“ÀÇ @ARGV “¸¦ “Ã³“¸®“ÇÏ“´Â “°Í“À¸“·Î “°£“ÁÖ“µÇ“¾î,
+“±× “¶§“¿¡ @ARGV“¸¦ “´Ù“½Ã “¼³“Á¤“ÇÏ“Áö “¾Ê“À¸“¸é, STDIN“¿¡“¼­“ÀÇ “ÀÔ“·Â“À» 
+“ÀÐ“¾î“µé“ÀÌ“´Â “°Í“ÀÌ “µË“´Ï“´Ù.
 
 =begin original
 
@@ -5134,9 +5127,9 @@ same.  For example:
 
 =end original
 
-“ß£“ÎÀ“ûÁ“ªÎ“ñé“ªÎ“Ùþ“í®“Öª“ª¬ (<$foo> “ªÎ“ªè“ª¦“ªÊ) ’Ã±“âí“«¹“««“«é’ÊÑ‘Êý“ªÇ“ª¢“ªì“ªÐ“¡¢
-“ª½“ªÎ’ÊÑ‘Êý“ª¬“ìý“Õô“ªò“ú¼“ªÊ“ª¦“«Õ“«¡“«¤“«ë“«Ï“«ó“«É“«ë“ªÎ“Ù£“îñ“ª½“ªÎ“ªâ“ªÎ“¡¢“Ù£“îñ“ªØ“ªÎ“úþ“«°“«í“«Ö“¡¢
-“Ù£“îñ“ªØ“ªÎ“«ê“«Õ“«¡“«ì“«ó“«¹“ªÎ“ª¤“ªº“ªì“ª«“ªò“ãÆ“ª·“ªÆ“ª¤“ªë“ªÈ“ªß“ªÊ“ªµ“ªì“ªÞ“ª¹“¡£
+“²ª“Àº “°ý“È£ “¾È“ÀÇ “¹®“ÀÚ“¿­“ÀÌ (<$foo>“°°“ÀÌ) “´Ü“¼ø“½º“Ä®“¶ó “º¯“¼ö“ÀÌ“¸é,
+“ÀÌ “º¯“¼ö“°¡ “ÀÔ“·Â“À» “¼ö“Çà“ÇÏ“´Â “ÆÄ“ÀÏ“ÇÚ“µé“ÀÇ “ÀÌ“¸§, “ÀÌ“¸§“À¸“·Î“ÀÇ “Çü“ÅÂglob,
+“ÀÌ“¸§“À¸“·Î“ÀÇ “¸®“ÆÛ“·±“½º “Áß “ÇÏ“³ª“¸¦ “Ç¥“½Ã“ÇÏ“´Â “°Í“À¸“·Î “°£“ÁÖ“ÇÕ“´Ï“´Ù.
 
     $fh = \*STDIN;
     $line = <$fh>;
@@ -5156,16 +5149,17 @@ is treated as C<glob("$x ")>, not C<readline($x)>.
 
 =end original
 
-“ß£“ÎÀ“ûÁ“ªÎ“ñé“ªÎ“Ùþ“í®“Öª“ª¬“«Õ“«¡“«¤“«ë“«Ï“«ó“«É“«ë“ªÇ“ªâ“«Õ“«¡“«¤“«ë“«Ï“«ó“«É“«ë“Ù£“¡¢“úþ“«°“«í“«Ö“¡¢
-“úþ“«°“«í“«Ö“«ê“«Õ“«¡“«ì“«ó“«¹“ªÎ“ª¤“ªº“ªì“ª«“ª¬“ìý“ªÃ“ª¿’Ã±“âí“«¹“««“«é’ÊÑ‘Êý“ªÇ“ªâ“ªÊ“ª±“ªì“ªÐ“¡¢
-“«°“«í“«Ö“ªò“ú¼“ªÊ“ª¦“«Õ“«¡“«¤“«ë“Ù£“ªÎ“«Ñ“«¿’¡¼“«ó“ªÈ“ú°’¼á“ªµ“ªì“¡¢“«³“«ó“«Æ“«­“«¹“«È“ªË“ªè“ªÃ“ªÆ
-“«Õ“«¡“«¤“«ë“Ù£“ªÎ“«ê“«¹“«È“ª«“¡¢“ª½“ªÎ“«ê“«¹“«È“ªÎ“ó­“ªÎ“«Õ“«¡“«¤“«ë“Ù£“ª¬“Ú÷“ªµ“ªì“ªÞ“ª¹“¡£
-“ª³“ªÎ‘Çø“Ü¬“ªÏ’Ã±“ªË“Ï°“Ùþ“îÜ“ªË“ú¼“ªï“ªì“ªÞ“ª¹“¡£
-C<< <$x> >> “ªÏ“ßÈ“ªË“Êà“ïÈ“«Ï“«ó“«É“«ë“ª«“ªé readline() “ª·“ªÞ“ª¹“ª¬“¡¢
-C<< <$hash{key}> >> “ªÏ“ßÈ“ªË glob() “ª·“ªÞ“ª¹“¡£
-$x “ªÏ’Ã±“âí“«¹“««“«é’¡¼’ÊÑ‘Êý“ªÇ“ª¹“ª¬“¡¢C<$hash{key}> “ªÏ“êÞ“ª¦(“«Ï“«Ã“«·“«å“é©“áÈ)“ª«“ªé“ªÇ“ª¹“¡£
-C<< <$x > >> (“åù“ÝÂ“ªÊ“Íö“ÛÜ“ªË“ñ¼“ëò) “ªÇ“ª¹“ªé C<readline($x)> “ªÇ“ªÏ“ªÊ“ª¯
-C<glob("$x ")> “ªÈ“ª·“ªÆ“Ðâ“ªï“ªì“ªÞ“ª¹“¡£
+“²ª“Àº “°ý“È£“ÀÇ “¾È“ÀÇ “¹®“ÀÚ“¿­“ÀÌ “ÆÄ“ÀÏ“ÇÚ“µé“µµ,  
+“ÆÄ“¾Ù“ÇÚ“µé“ÀÌ“¸§, “Çü“ÅÂglob, “Çü“ÅÂglob “¸®“ÆÛ“·±“½º “Áß “¾î“´À “ÇÏ“³ª“°¡ “µé“¾î“°£ 
+“´Ü“¼ø “½º“Ä®“¶ó“º¯“¼ö“µµ “¾Æ“´Ò “°æ“¿ì“´Â,
+glob“¸¦ “¼ö“Çà“ÇÒ “ÆÄ“ÀÏ“¸í“ÀÇ “ÆÐ“ÅÏ“À¸“·Î “ÇØ“¼®“µÇ“¾î, “ÄË“ÅÎ“½º“Æ®“¿¡ “ÀÇ“ÇØ
+“ÆÄ“ÀÏ“¸í“ÀÇ “¸®“½º“Æ®“³ª, “±× “¸®“½º“Æ®“ÀÇ “´Ù“À½ “ÆÄ“ÀÏ“¸í“ÀÌ “¹Ý“È¯“µË“´Ï“´Ù.
+“ÀÌ “±¸“º°“Àº “´Ü“¼ø“È÷ “±¸“¹®“Àû“À¸“·Î “¼ö“Çà“µË“´Ï“´Ù.
+C<< <$x> >> “´Â “Æò“¼Ò “°£“Á¢“ÇÚ“µé“¿¡“¼­ readline() “ÇÏ“Áö“¸¸ 
+C<< <$hash{key}> >> “´Â “Ç×“»ó glob() “ÇÕ“´Ï“´Ù.
+$x “´Â “´Ü“¼ø “½º“Ä®“¶ó“º¯“¼ö“ÀÌ“Áö“¸¸, C<$hash{key}> “´Â “´Ù“¸£“±â “¶§“¹®“ÀÔ“´Ï“´Ù(“ÇØ“½¬ “¿ä“¼Ò). 
+C<< <$x > >> (“¿©“ºÐ“ÀÇ “°ø“¹é“¿¡ “ÁÖ“ÀÇ) “¿¡“¼­“µµ C<readline($x)> “ÀÌ “¾Æ“´Ñ
+C<glob("$x ")> “·Î“½á “ÇØ“¼®“µË“´Ï“´Ù. 
 
 =begin original
 
@@ -5179,14 +5173,14 @@ way to have done it in the first place.)  For example:
 
 =end original
 
-“ªÞ“ªº“¡¢1 “Ó«“Í­“ªÀ“ª±“«À“«Ö“«ë“«¯“«©’¡¼“«È“î÷“ËÒ“ª¬“ú¼“ªÊ“ªï“ªì“ªÞ“ª¹“ª¬“¡¢“îñ“ªÎ“Ó«“Õª“ªË“ßö“ª¤“ª¿
-“Êà“ïÈ“«Õ“«¡“«¤“«ë“«Ï“«ó“«É“«ë“ªÈ“ÔÒ“ª¸“ªË“ªÊ“ªë“¡¢C<< <$foo> >> “ªÎ“ªè“ª¦“ªË“ªÏ“ßö“ª±“ªÞ“ª»“ªó“¡£
-(Perl “ªÎ“Í¯“ª¤“«Ð’¡¼“«¸“«ç“«ó“ªÇ“ªÏ“¡¢“«Õ“«¡“«¤“«ë“Ù£“«°“«í“«Ö“ªÈ“ú°’¼á“ªµ“ª»“ªë“ª¿“ªá“ªË
-C<< <${foo}> >> “ªÎ“ªè“ª¦“ªË“ñé“ÎÀ“ûÁ“ªò“ìý“ªì“ªÆ“ª¤“ªÞ“ª·“ª¿“¡£
-“õÌ“ÐÎ“ªÇ“ªÏ“ªè“ªê“Ù¥“ü¬“ªË“ª¹“ªë“ª¿“ªá“ªË“¡¢C<glob($foo)> “ªÈ‘ÄÚ“Ý»’´Ø‘Êý“ªò
-“û¼“ªÖ“ª³“ªÈ“ªâ“ªÇ“ª­“ªÞ“ª¹“¡£
-“ªª“ª½“ªé“ª¯“¡¢“ªÞ“ªº“¡¢“ª³“ªÁ“ªé“ªÎ“Û°“ªÇ“ãË“ª¹“ªÎ“ª¬“ïá“ú°“ªÇ“ª·“ªç“ª¦“¡£)
-“ÖÇ:
+“¿ì“¼±“Àº 1“´Ü“°è“¸¸ “½Ö“µû“¿È“Ç¥ “Àü“°³“°¡ “¼ö“Çà“µÇ“Áö“¸¸, “¾Õ“ÀÇ “´Ü“¶ô“¿¡ “¾²“ÀÎ
+“°£“Á¢“ÆÄ“ÀÏ“ÇÚ“µé“¿Í “°°“¾Æ“Áö“´Â C<< <$foo> >> “¿Í “°°“ÀÌ“´Â “¾µ “¼ö “¾ø“½À“´Ï“´Ù.
+(Perl “ÀÇ “³°“Àº “¹ö“Á¯“¿¡“¼­“´Â “ÆÄ“ÀÏ“¸í glob“·Î “ÇØ“¼®“½Ã“Å°“±â “À§“ÇØ“¼­“´Â
+ C<< <${foo}> >> “°°“ÀÌ “Áß“°ý“È£“¸¦ “³Ö“¾ú“½À“´Ï“´Ù.
+“ÃÖ“±Ù“¿¡“´Â “º¸“´Ù “¸í“È®“ÇÏ“°Ô “ÇÏ“±â “À§“ÇØ, C<glob($foo)> “¿Í “°°“ÀÌ “³»“ºÎ“ÇÔ“¼ö“¸¦
+“ºÎ“¸¦ “¼ö“µµ “ÀÖ“½À“´Ï“´Ù.
+“¾Æ“¸¶“µµ, “¿ì“¼±“Àº “ÀÌ“ÂÊ“¿¡“¼­ “½Ã“Çè“ÇØ “º¸“´Â “°Í“ÀÌ “ÁÁ“°Ú“ÁÒ)
+“¿¹“¸¦ “µé“¸é:
 
     while (<*.c>) {
 	chmod 0644, $_;
@@ -5198,7 +5192,7 @@ is roughly equivalent to:
 
 =end original
 
-“ªÏ“ªÀ“ª¤“ª¿“ª¤“ì¤“ù»“ªÈ“Ôõ’²Á“ªÇ“ª¹:
+“´Â “´ë“Ã¼“Àû“À¸“·Î “¾Æ“·¡“¿Í “°°“½À“´Ï“´Ù.
 
     open(FOO, "echo *.c | tr -s ' \t\r\f' '\\012\\012\\012\\012'|");
     while (<FOO>) {
@@ -5213,8 +5207,8 @@ C<File::Glob> extension.  Of course, the shortest way to do the above is:
 
 =end original
 
-“Ó£“ª·’¼Â“ð·“ªÎ“«°“«í“«Ö“ªÏ‘ÄÚ“Ý»“îÜ“ªË“øö“ñÞ“ªÎ C<File::Glob> “«â“«¸“«å’¡¼“«ë“ªò“ÞÅ“ª¤“ªÞ“ª¹“¡£
-“ªâ“ªÁ“ªí“ªó“¡¢“ªâ“ªÃ“ªÈ“ÊÛ’Ã±“ªË“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ßö“ª±“ªÞ“ª¹:
+“´Ù“¸¸ “½Ç“Á¦“ÀÇ glob“´Â “³»“ºÎ“Àû“À¸“·Î “Ç¥“ÁØ“ÀÎ C<File::Glob> “¸ð“µâ“À» “»ç“¿ë“ÇÕ“´Ï“´Ù.
+“¹°“·Ð “´õ“¿í “°£“´Ü“È÷ “¾Æ“·¡“¿Í “°°“ÀÌ “¾µ “¼ö “ÀÖ“½À“´Ï“´Ù.
 
     chmod 0644, <*.c>;
 
@@ -5234,20 +5228,19 @@ say
 
 =end original
 
-(“«Õ“«¡“«¤“«ë)“«°“«í“«Ö“ªÏ“ãæ“ª·“ª¤“«ê“«¹“«È“ªò“ËÒ“ã·“ª¹“ªë“ªÈ“ª­“ªË“ªÀ“ª±(“ðÚ“ªß’¹þ“ªß“ªÎ)“ìÚ‘Êý“ªò
-“øÄ’²Á“ª·“ªÞ“ª¹“¡£
-“îï“ªÆ“ªÎ“ö·“ªÏ“ËÒ“ã·“ª¹“ªë“îñ“ªË’ÆÉ“ªß’¹þ“ªó“ªÇ“ª¤“ªÊ“ª±“ªì“ªÐ“ªÊ“ªê“ªÞ“ª»“ªó“¡£
-“ª³“ªì“ªÏ“«ê“«¹“«È“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÏ“¡¢“ªÈ“ªË“ª«“ª¯“í»“ÔÑ“îÜ“ªË“îï“ªÆ“ªò“ö¢“ªê’¹þ“ªà“ªÎ“ªÇ
-“ñì“é©“ªÇ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
-“ª·“ª«“ª·“¡¢“«¹“««“«é’¡¼“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªÏ“ª³“ªÎ“æÑ“ß©“í­“ªÏ“û¼“ªÓ“õó“ªµ“ªì“ª¿“ãÁ“ªÎ
-“ó­“ªÎ“ö·“ª«“¡¢“«ê“«¹“«È“ª¬“ªÊ“ª¯“ªÊ“ªÃ“ª¿“ªÈ“ª­“ªË“ªÏ C<undef> “ªò“Ú÷“ª·“ªÞ“ª¹“¡£
-“«Õ“«¡“«¤“«ë“«Ï“«ó“«É“«ë“ªò’ÆÉ“ªß’¹þ“ªà“íÞ“ùê“ªÏ“¡¢“«°“«í“«Ö“ª¬ C<while> “ªÎ‘Ìõ“Ëì“Ý»“ªË“ª¢“ªë“íÞ“ùê“ªÏ
-“í»“ÔÑ“îÜ“ªÊ C<defined> “ª¬“ßæ“à÷“ªµ“ªì“ªÞ“ª¹“¡£
-“ªÊ“ª¼“ªÊ“ªé“ª½“ª¦“ª·“ªÊ“ª¤“ªÈ“¡¢“Üâ‘À´“ªÎ glob “ªÎ“Ú÷“ªê“ö· (F<0> “ªÈ“ª¤“ª¦“«Õ“«¡“«¤“«ë) “ª¬
-“«ë’¡¼“«×“ªò“ðû“Öõ“ªµ“ª»“ªë“ª«“ªé“ªÇ“ª¹“¡£
-“ª³“ª³“ªÇ“ªâ“¡¢C<undef> “ªÏ“ìé“Óø“ªÀ“ª±“Ú÷“ªµ“ªì“ªÞ“ª¹“¡£
-’½¾“ªÃ“ªÆ“¡¢“ªâ“ª·“«°“«í“«Ö“ª«“ªé“ìé“ªÄ“ªÎ“ö·“ªÀ“ª±“ªò“ßÌ“ïÒ“ª·“ªÆ“ª¤“ªë“íÞ“ùê“¡¢
-“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ßö“ª¯“ª³“ªÈ“ª¬:
+(“ÆÄ“ÀÏ) glob“´Â “»õ“·Î“¿î “¸®“½º“Æ®“¸¦ “°³“½Ã“ÇÒ “¶§“¿¡“¸¸(“Æ÷“ÇÔ“µÈ) “ÀÎ“¼ö“¸¦ “Æò“°¡“ÇÕ“´Ï“´Ù.
+“¸ð“µç “°ª“Àº “°³“½Ã“ÇÏ“±â “Àü“¿¡ “ÀÐ“¾î“µé“ÀÌ“Áö “¾Ê“À¸“¸é “¾È“µË“´Ï“´Ù.
+“ÀÌ“°Í“Àº “¸®“½º“Æ®“ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“´Â “¾î“Â·“µç “ÀÚ“µ¿“Àû“À¸“·Î “¸ð“µÎ“¸¦ “²ø“¾î“µé“ÀÌ“±â “¶§“¹®“¿¡
+“Áß“¿ä“ÇÏ“Áö “¾Ê“½À“´Ï“´Ù.
+“±×“·¯“³ª, “½º“Ä®“¶ó “ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“´Â “ÀÌ “¿¬“»ê“ÀÚ“´Â “È£“Ãâ“µÈ “¶§“ÀÇ “´Ù“À½“ÀÇ “°ª“ÀÎ“°¡
+“¸®“½º“Æ®“°¡ “¾ø“´Â “¶§“¿¡“´Â C<undef>“¸¦ “¹Ý“È¯“ÇÕ“´Ï“´Ù.
+“ÆÄ“ÀÏ“ÇÚ“µé“À» “ÀÐ“¾î“µé“ÀÏ “°æ“¿ì“´Â glob“°¡ C<while>“ÀÇ “Á¶“°Ç“ºÎ“¿¡ “ÀÖ“´Â “°æ“¿ì“´Â
+“ÀÚ“µ¿“Àû“ÀÎ C<defined>“°¡ “»ý“¼º“µË“´Ï“´Ù.
+“¿Ö“³Ä“¸é “±×“·¸“°Ô “ÇÏ“Áö“¾Ê“À¸“¸é, “º»“·¡“ÀÇ glob “ÀÇ “¹Ý“È¯“°ª(F<0>“¶ó“°í “ÇÏ“´Â “ÆÄ“ÀÏ)“ÀÌ
+“·ç“ÇÁ“¸¦ “Á¾“·á“½Ã“Å°“±â“¶§“¹®“ÀÔ“´Ï“´Ù.
+“¿©“±â“¿¡“¼­“µµ, C<undef>“´Â “ÇÑ“¹ø“¸¸ “¹Ý“È¯“µË“´Ï“´Ù.
+“µû“¶ó“¼­, “¸¸“¾à glob“¿¡“¼­ “ÇÏ“³ª“ÀÇ “°ª“¸¸“À» “»ó“Á¤“ÇÏ“°í “ÀÖ“´Â “°æ“¿ì,
+“¾Æ“·¡“¿Í “°°“ÀÌ “¾²“´Â “°Í“ÀÌ
 
     ($file) = <blurch*>;
 
@@ -5257,7 +5250,7 @@ than
 
 =end original
 
-“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ßö“ª¯“ªè“ªê“ªÏ“ªë“ª«“ªË“ÕÞ“ª¤“ªÇ“ª¹:
+“¾Æ“·¡“¿Í “°°“ÀÌ “¾²“´Â “°Í“º¸“´Ù “ÈÎ“¾À “ÁÁ“½À“´Ï“´Ù.
 
     $file = <blurch*>;
 
@@ -5268,7 +5261,7 @@ returning false.
 
 =end original
 
-“ªÊ“ª¼“ªÊ“ªé“ý­“íº“ªÏ“«Õ“«¡“«¤“«ë“Ù£“ªò“Ú÷“ª¹“íÞ“ùê“ªÈ˜ºô“ªò“Ú÷“ª¹“íÞ“ùê“ª¬“ª¢“ªë“ª«“ªé“ªÇ“ª¹“¡£
+“¿Ö“³Ä“¸é “ÈÄ“ÀÚ“´Â “ÆÄ“ÀÏ“¸í“À» “¹Ý“È¯“ÇÏ“´Â “°æ“¿ì "“°Å“Áþ"“À» “¹Ý“È¯“ÇÏ“´Â “°æ“¿ì“°¡ “ÀÖ“±â“¶§“¹®“ÀÔ“´Ï“´Ù.
 
 =begin original
 
@@ -5278,8 +5271,8 @@ to become confused with the indirect filehandle notation.
 
 =end original
 
-’ÊÑ‘Êý’ÊÑ“üµ“ªË“Óû’Àï“ª¹“ªë“íÞ“ùê“¡¢“Ù¥“ªé“ª«“ªË glob() ’´Ø‘Êý“ªò“ÞÅ“ª¦“Û°“ª¬“ÕÞ“ª¤“ªÇ“ª¹“¡£
-“ªÊ“ª¼“ªÊ“ªé“Í¯“ª¤“øú“ÑÀ“ªÏ“Êà“ïÈ“«Õ“«¡“«¤“«ë“«Ï“«ó“«É“«ë“øú“ÑÀ“ªÈ“ûè‘ÂÒ“ª¹“ªë“ª«“ªâ“ò±“ªì“ªÊ“ª¤“ª«“ªé“ªÇ“ª¹“¡£
+“º¯“¼ö“º¯“È¯“¿¡ “µµ“Àü“ÇÏ“´Â “°æ“¿ì, glob() “ÇÔ“¼ö“¸¦ “»ç“¿ë“ÇÏ“´Â “Æí“ÀÌ “ÁÁ“½À“´Ï“´Ù.
+“¿Ö“³Ä“¸é “³°“Àº “Ç¥“±â“´Â “°£“Á¢ “ÆÄ“ÀÏ“ÇÚ“µé“Ç¥“±â“¿Í “È¥“¶õ“ÇÒ“Áö“µµ “¸ð“¸£“±â “¶§“¹®“ÀÔ“´Ï“´Ù.
 
     @files = glob("$dir/*.[ch]");
     @files = glob($files[$i]);
@@ -5287,7 +5280,7 @@ to become confused with the indirect filehandle notation.
 =head2 Constant Folding
 X<constant folding> X<folding>
 
-(“ïÒ‘Êý“ªÎ’¾ö“ªß’¹þ“ªß)
+(“Á¤“¼ö(Constant)“ÀÇ “Æú“µù)
 
 =begin original
 
@@ -5300,10 +5293,10 @@ compile time.  You can say
 
 =end original
 
-C “ªÈ“ÔÒ“ª¸“ªè“ª¦“ªË Perl “ªÇ“ªâ“¡¢“æÑ“ß©“í­“ªË’ÂÐ“ª¹“ªë“ª¹“ªÙ“ªÆ“ªÎ“ìÚ‘Êý“ª¬“«¹“«¿“«Æ“«£“«Ã“«¯“ªÇ“¡¢
-“Üù“íÂ“éÄ“ª¬“ªÊ“ª¤“ªÈ“÷÷‘¶Ï“ªÇ“ª­“ªì“ªÐ“¡¢“«³“«ó“«Ñ“«¤“«ë“ãÁ“ªË“ãÒ“ªÎ“øÄ’²Á“ªò“ú¼“ªÊ“ªÃ“ªÆ“ª·“ªÞ“ª¤“ªÞ“ª¹“¡£
-“÷å“ªË“¡¢’ÊÑ‘Êý“öÇ“üµ“ªÎ“Ùí“ª¤“«ê“«Æ“«é“«ë“ªÉ“ª¦“ª·“ªÎ“Ùþ“í®“Öª“Ö§“Ì¿“ªÏ“«³“«ó“«Ñ“«¤“«ë“ãÁ“ªË“ú¼“ªÊ“ªï“ªì“ªÞ“ª¹“¡£
-“«Ð“«Ã“«¯“«¹“«é“«Ã“«·“«å“ªÎ“ú°’¼á“ªâ“«³“«ó“«Ñ“«¤“«ë“ãÁ“ªË“ú¼“ªÊ“ªï“ªì“ªÞ“ª¹“¡£
+C “¿Í “¸¶“Âù“°¡“Áö“·Î Perl “¿¡“¼­“µµ, “¿¬“»ê“ÀÚ“¿¡ “´ë“ÇØ “¸ð“µç “ÀÎ“¼ö“°¡ “½º“ÅÂ“Æ½“À¸“·Î,
+“ºÎ“ÀÛ“¿ë“ÀÌ “¾ø“´Ù“°í “ÆÇ“´Ü“ÇÒ “¼ö “ÀÖ“À¸“¸é, “ÄÄ“ÆÄ“ÀÏ “ÇÒ “¶§“¿¡ “½Ä“ÀÇ “Æò“°¡“¸¦ “¼ö“Çà“ÇØ“¹ö“¸³“´Ï“´Ù.
+“Æ¯“È÷, “º¯“¼ö“Ä¡“È¯“ÀÌ “¾ø“´Â “¸®“ÅÍ“·²“³¢“¸®“ÀÇ “¹®“ÀÚ“¿­“¿¬“°á“Àº “ÄÄ“ÆÄ“ÀÏ “½Ã “¼ö“Çà“µË“´Ï“´Ù.
+“¹é“½½“·¡“½¬“ÀÇ “ÇØ“¼®“µµ “ÄÄ“ÆÄ“ÀÏ “½Ã “¼ö“Çà“µË“´Ï“´Ù.
 
     'Now is the time for all' . "\n" .
 	'good men to come to.'
@@ -5315,7 +5308,7 @@ you say
 
 =end original
 
-“ªÈ“ßö“ª¤“ªÆ“ªâ“¡¢‘ÄÚ“Ý»“îÜ“ªË 1 “ªÄ“ªÎ“Ùþ“í®“Öª“ªË“ªÊ“ªê“ªÞ“ª¹“¡£“ÔÒ’ÍÍ“ªË
+“¶ó“°í “½á“µµ “³»“ºÎ“Àû“À¸“·Î“´Â “ÇÑ“°³“ÀÇ “¹®“ÀÚ“¿­“ÀÌ “µË“´Ï“´Ù. “°°“Àº “¸ð“¾ç“À¸“·Î
 
     foreach $file (@filenames) {
 	if (-s $file > 5 + 100 * 2**16) {  }
@@ -5328,13 +5321,13 @@ represents so that the interpreter won't have to.
 
 =end original
 
-“ªÈ“ßö“ª¯“ªÈ“«³“«ó“«Ñ“«¤“«é“ªÏ“¡¢“ãÒ“ª¬“øú“ªï“ª¹‘Êý“ö·“ªò“ª¢“ªé“ª«“ª¸“ªá“Íª“ß©“ª·“ªÞ“ª¹“ªÎ“ªÇ“¡¢
-“«¤“«ó“«¿“«×“«ê“«¿“ªÇ“Íª“ß©“ª¹“ªë“ù±“é©“ª¬“ªÊ“ª¯“ªÊ“ªÃ“ªÆ“ª¤“ªÞ“ª¹“¡£
+“¶ó“°í “¾²“¸é “ÄÄ“ÆÄ“ÀÏ“·¯“´Â “½Ä“ÀÌ “Ç¥“Çö“ÇÏ“´Â “¼ý“ÀÚ“°ª“À» “´Ù“½Ã“±Ý “°è“»ê“ÇÏ“±â“¶§“¹®“¿¡
+“ÀÎ“ÅÍ“ÇÁ“¸®“ÅÍ“¿¡“¼­ “°è“»ê“ÇÒ “ÇÊ“¿ä“°¡ “¾ø“½À“´Ï“´Ù.
 
 =head2 No-ops
 X<no-op> X<nop>
 
-(“Ùí’¼Â“ú¼)
+(“¹«“½Ç“Çà) 
 
 =begin original
 
@@ -5344,16 +5337,16 @@ context, so you can for example safely do
 
 =end original
 
-Perl “ªÏ“Íë“ãÒ“ªË“ªÏ“Ùí’¼Â“ú¼“æÑ“ß©“í­“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“ª¬“¡¢“Õ£“ªÎ“ïÒ‘Êý C<0> “ªÈ C<1> “ªÏ
-“÷å“Ü¬“ªË“Ùí’¸ú“«³“«ó“«Æ“«­“«¹“«È“ªÇ“ªâ“Ìí“Í±“ªò“õó“ªµ“ªÊ“ª¤“ª³“ªÈ“ªË“ªÊ“ªÃ“ªÆ“ª¤“ªë“ªÎ“ªÇ“¡¢
-“ÖÇ“ª¨“ªÐ“äÌ“îï“ªË“ì¤“ù»“ªÎ“ªè“ª¦“ªË“ßö“ª±“ªÞ“ª¹:
+Perl “Àº “°ø“½Ä“Àû“À¸“·Î“´Â “¹«“½Ç“Çà“¿¬“»ê“ÀÚ“´Â “¾ø“Áö“¸¸, “ºó “Á¤“¼ö C<0>“¿Í C<1>“Àº
+“Æ¯“º°“È÷ “¹«“È¿“ÄÁ“ÅØ“½º“Æ®“¿¡“¼­“µµ “°æ“°í“¸¦ “³»“Áö“¾Ê“´Â “°Í“À¸“·Î “µÇ“¾î “ÀÖ“±â“¶§“¹®“¿¡
+“¿¹“¸¦ “µé“¸é “¾È“Àü“ÇÏ“°Ô “¾Æ“·¡“¿Í “°°“ÀÌ “¾µ“¼ö “ÀÖ“½À“´Ï“´Ù.
 
     1 while foo();
 
 =head2 Bitwise String Operators
 X<operator, bitwise, string>
 
-(“«Ó“«Ã“«È“Öª“æÑ“ß©“í­)
+(“ºñ“Æ®“¿­ “¿¬“»ê“ÀÚ) 
 
 =begin original
 
@@ -5362,7 +5355,7 @@ Bitstrings of any size may be manipulated by the bitwise operators
 
 =end original
 
-“ìò“ëò“ªÎ“«µ“«¤“«º“ªÎ“«Ó“«Ã“«È“Öª“ªÏ“«Ó“«Ã“«È’Ã±“êÈ“æÑ“ß©“í­(C<~ | & ^>)“ªÇ“ðÃ“íÂ“ªÇ“ª­“ªÞ“ª¹“¡£
+“ÀÓ“ÀÇ“ÀÇ “»ç“ÀÌ“Áî“ÀÇ “ºñ“Æ®“¿­“Àº “ºñ“Æ®“´Ü“À§“¿¬“»ê“ÀÚ(C<~ | & ^>)“·Î “Á¶“ÀÛ“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
 
 =begin original
 
@@ -5375,11 +5368,11 @@ bytes.
 
 =end original
 
-“ì£“ú£“«Ó“«Ã“«È’Ã±“êÈ“æÑ“ß©“í­“ªÎ“«ª“«Ú“«é“«ó“«É“ª¬“ì¶“ªÊ“ªÃ“ª¿“íþ“ªµ“ªÎ“Ùþ“í®“Öª“ªÀ“ªÃ“ª¿“íÞ“ùê“¡¢
-B<|> “ªÈ B<^> “ªÎ“æÑ“ß©“í­“ªÏ“Ó­“ª¤“ö°“ªÎ“«ª“«Ú“«é“«ó“«É“ªÎ“éÓ“ö°“ªË“õÚ“Ê¥“ªÎ“«¼“«í“ª¬
-“ªÄ“ª¤“ªÆ“ª¤“ªë“ªÈ“ªß“ªÊ“ª·“ªÞ“ª¹“¡£
-“ìé“Û° B<&> “æÑ“ß©“í­“ªÏ“íþ“ª¤“Û°“ªÎ“«ª“«Ú“«é“«ó“«É“ª¬“Ó­“ª¤“Û°“ªË“ï·“ªê“ýþ“ªá“ªé“ªì“ªÞ“ª¹“¡£
-“ª³“ªÎ’³È“íå“ªä“Ó­“õê“ªÎ“Ø£“Óø“ªÏ“«Ð“«¤“«È’Ã±“êÈ“ªÇ“ª¹“¡£
+“ÀÌ“Ç×“ºñ“Æ®“´Ü“À§“¿¬“»ê“ÀÚ“ÀÇ “ÇÇ“¿¬“»ê“ÀÚ“°¡ “´Ù“¸¥ “±æ“ÀÌ“ÀÇ “¹®“ÀÚ“¿­“ÀÎ “°æ“¿ì,
+B<|>“¿Í B<^> “ÀÇ “¿¬“»ê“ÀÚ“´Â “Âª“Àº “Ãø“ÀÇ “ÇÇ“¿¬“»ê“ÀÚ“ÀÇ “¿À“¸¥“ÂÊ“¿¡ “Á¦“·Î“°¡ “Ãß“°¡“·Î
+“ºÙ“¾î“ÀÖ“´Â “°Í“À¸“·Î “°£“ÁÖ“ÇÕ“´Ï“´Ù.
+“ÇÑ“Æí B<&> “¿¬“»ê“ÀÚ“´Â “±ä “ÂÊ“ÀÇ “ÇÇ“¿¬“»ê“ÀÚ“°¡ “Âª“Àº “ÂÊ“¿¡ “¸Â“Ãß“°Ô “µË“´Ï“´Ù.
+“ÀÌ “È®“Àå “ÀÌ“³ª “Ãà“¼Ò“´Â “¹Ù“ÀÌ“Æ® “´Ü“À§“ÀÔ“´Ï“´Ù.
 
     # ASCII-based examples
     print "j p \n" ^ " a h";        	# prints "JAPH\n"
@@ -5396,10 +5389,10 @@ operation you intend by using C<""> or C<0+>, as in the examples below.
 
 =end original
 
-“«Ó“«Ã“«È“Öª“ªò“ðÃ“íÂ“ª·“ª¿“ª¤“íÞ“ùê“ªÏ“¡¢“ü¬’¼Â“ªË“«Ó“«Ã“«È“Öª“ª¬“Ô¤“ªµ“ªì“ªë“ªè“ª¦“ªË“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤:
-“«ª“«Ú“«é“«ó“«É“ª¬‘Êý“í®“ªÎ“íÞ“ùê“¡¢B<‘Êý“ö·> “«Ó“«Ã“«È’Ã±“êÈ“æÑ“ß©“ªò’²¾“ïÒ“ª·“ªÞ“ª¹“¡£
-“Ù¥“ãÆ“îÜ“ªË“æÑ“ß©“ªÎ“úþ“ªò“ò¦“ïÒ“ª¹“ªë“ªÈ“ª­“ªË“ªÏ“¡¢“ì¤“ù»“ªÎ“ÖÇ“ªÎ“ªè“ª¦“ªË
-C<""> “ª« C<0+> “ªò“ÞÅ“ªÃ“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
+“ºñ“Æ® “¿­“À» “Á¶“ÀÛ“ÇÏ“°í“½Í“À» “°æ“¿ì“´Â “È®“½Ç“È÷ “ºñ“Æ®“¿­“ÀÌ “³Ñ“°Ü“Áú“¼ö “ÀÖ“µµ“·Ï “ÇØ“ÁÖ“¼¼“¿ä.
+“ÇÇ“¿¬“»ê“ÀÚ“°¡ “Á¤“¼ö“ÀÎ “°æ“¿ì, B<“¼ý“ÀÚ“°ª> “ºñ“Æ®“´Ü“À§“¿¬“»ê“À» “°¡“Á¤“ÇÕ“´Ï“´Ù.
+“¸í“½Ã“Àû“À¸“·Î “¿¬“»ê“ÀÇ “Çü“ÅÂ“¸¦ “Áö“Á¤“ÇÒ “¶§“¿¡“´Â “¾Æ“·¡“ÀÇ “¿¹“¿Í “°°“ÀÌ
+C<""> “³ª C<0+> “¸¦ “»ç“¿ë“ÇØ“ÁÖ“¼¼“¿ä. 
 
     $foo =  150  |  105;	# yields 255  (0x96 | 0x69 is 0xFF)
     $foo = '150' |  105;	# yields 255
@@ -5416,13 +5409,13 @@ in a bit vector.
 
 =end original
 
-“«Ó“«Ã“«È“«Ù“«¯“«¿“ªÎ“ËÁ‘¡©“ªÎ“«Ó“«Ã“«È“ªò“ªÉ“ªÎ“ªè“ª¦“ªË“ðÃ“íÂ“ª¹“ªë“ª«“ªÎ“ï×“ÜÃ“ªË“ªÄ“ª¤“ªÆ“ªÏ
-L<perlfunc/vec> “ªò‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
+“ºñ“Æ®“º¤“ÅÍ“ÀÇ “°¢“°¢“ÀÇ “ºñ“Æ®“¸¦ “¾î“¶»“°Ô “Á¶“ÀÛ“ÇÏ“´Â“°¡“ÀÇ “Á¤“º¸“¿¡ “´ë“ÇØ“¼­“´Â
+L<perlfunc/vec> “¸¦ “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä.
 
 =head2 Integer Arithmetic
 X<integer>
 
-(“ïÚ‘Êý“æÑ“ß©)
+(“Á¤“¼ö“¿¬“»ê)
 
 =begin original
 
@@ -5431,9 +5424,9 @@ floating point.  But by saying
 
 =end original
 
-“«Ç“«Õ“«©“«ë“«È“ªÇ“ªÏ“¡¢Perl “ªÏ“æÑ“ß©“ªò“Ý©“ÔÑ“á³‘Êý“ªÇ“ú¼“ªÊ“ªï“ªÊ“ª±“ªì“ªÐ“ªÊ“ªé“ªÊ“ª¤“ªâ“ªÎ“ªÈ
-“ª·“ªÆ“ª¤“ªÞ“ª¹“¡£
-“ª·“ª«“ª·“¡¢(“ªâ“ª·“ª½“ª¦“ª·“ª¿“ª¤“ªÊ“ªé)
+“±â“º»“Àû“À¸“·Î, Perl“Àº “¿¬“»ê“À» “ºÎ“µ¿“¼Ò“¼ö“¿¡“¼­ “¼ö“Çà“ÇÏ“Áö “¾Ê“À¸“¸é “¾È“µÇ“´Â “°Í“À¸“·Î
+“ÇÏ“°í “ÀÖ“½À“´Ï“´Ù.
+“ÇÏ“Áö“¸¸(“¸¸“¾à “±×“·¸“°Ô “ÇÏ“°í “½Í“´Ù“¸é)
 
     use integer;
 
@@ -5445,9 +5438,9 @@ An inner BLOCK may countermand this by saying
 
 =end original
 
-“ªÈ“ßö“ª±“ªÐ“¡¢“ª½“ªÎ“íÞ“á¶“ª«“ªé“úÞ“î¤“ªÎ BLOCK “ªÎ“ðû“ªï“ªê“ªÞ“ªÇ“ªÏ“¡¢“ïÚ‘Êý“æÑ“ß©“ªò
-“ú¼“ªÊ“ªÃ“ªÆ“ªè“ª¤“ªÈ“¡¢“«³“«ó“«Ñ“«¤“«é“ªË“ò¦“ãÆ“ª¹“ªë“ª³“ªÈ“ª¬“ªÇ“ª­“ªÞ“ª¹“¡£
-‘ÄÚ“Ý»“ªÎ BLOCK “ªÇ“¡¢
+“¶ó“°í “¾²“¸é “±× “°÷“¿¡“¼­ “Çö“Àç“ÀÇ BLOCK “ÀÇ “³¡“±î“Áö“´Â “Á¤“¼ö“¿¬“»ê“À» “¼ö“Çà“ÇØ“µµ “µÇ“¸ç
+“ÄÄ“ÆÄ“ÀÏ“·¯“¿¡ “Áö“½Ã“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
+“³»“ºÎ“ÀÇ BLOCK“¿¡“¼­
 
     no integer;
 
@@ -5461,13 +5454,13 @@ or so.
 
 =end original
 
-“ªÈ“ßö“ª±“ªÐ“¡¢“ª½“ªÎ BLOCK “ªÎ“ðû“ªï“ªê“ªÞ“ªÇ“ªÏ“¡¢“ò¦“ãÆ“ªò“ö¢“ªê“á¼“ª¹“ª³“ªÈ“ªË“ªÊ“ªê“ªÞ“ª¹“¡£
-“ª³“ªì“ªÏ“îï“ªÆ“ªò“ïÚ‘Êý“ªÀ“ª±“ªò“ÞÅ“ªÃ“ªÆ’½è“×â“ª¹“ªë“ª³“ªÈ“ªò“ëò“Ú«“ª¹“ªë“ªï“ª±“ªÇ“ªÏ“ªÊ“ª¤“ª³“ªÈ“ªË
-“ñ¼“ëò“ª·“ªÆ“ª¯“ªÀ“ªµ“ª¤“¡£
-“ª³“ªì“ªÏ’Ã±“ªË Perl “ª¬“ïÚ‘Êý“ªò“ÞÅ“ª¤“ª¿“ª¤“ªÈ“ÞÖ“ªÃ“ª¿“ªÈ“ª­“ªË“ÞÅ“ª¦“ª«“ªâ“ª·“ªì“ªÊ“ª¤“¡¢
-“ªÈ“ª¤“ª¦“ªÀ“ª±“ªÇ“ª¹“¡£
-“ÖÇ“ª¨“ªÐ“¡¢C<use integer> “ªÎ“ò¦“ïÒ“ª¬“ª¢“ªÃ“ªÆ“ªâ“¡¢C<sqrt(2)> “ªÈ“ª¹“ªë“ªÈ“¡¢
-C<1.4142135623731> “ªÈ“ª¤“ªÃ“ª¿“Ì¿“Íý“ª¬“Ú÷“ªÃ“ªÆ“ª­“ªÞ“ª¹“¡£
+“¶ó“°í “¾²“¸é, “±× BLOCK “ÀÇ “³¡“±î“Áö“´Â “Áö“½Ã“¸¦ “Áö“¿î“°Í“ÀÌ “µË“´Ï“´Ù.
+“ÀÌ“°Í“Àº “¸ð“µÎ“¸¦ “Á¤“¼ö“¸¸“À» “»ç“¿ë“ÇØ“¼­ “Ã³“¸®“ÇÏ“´Â “°Í“À» “ÀÇ“¹Ì“ÇÏ“´Â “°Í“ÀÌ “¾Æ“´Ñ “°Í“¿¡
+“ÁÖ“ÀÇ“ÇØ“ÁÖ“¼¼“¿ä.
+“ÀÌ“°Í“Àº “´Ü“¼ø“È÷ Perl “ÀÌ “Á¤“¼ö“¸¦ “»ç“¿ë“ÇÏ“°í “½Í“´Ù“°í “»ý“°¢“ÇÑ “¶§“¿¡ “»ç“¿ë“ÇÒ“Áö“µµ “¸ð“¸£“´Â
+“°Í “»Ó“ÀÔ“´Ï“´Ù.
+“¿¹“¸¦ “µé“¾î, C<use integer> “ÀÇ “Áö“½Ã“°¡ “ÀÖ“¾î“µµ, C<sqrt(2)> “¶ó“°í “ÇÏ“¸é,
+C<1.4142135623731> “¶ó“´Â “°á“°ú“°¡ “¹Ý“È¯“µË“´Ï“´Ù. 
 
 =begin original
 
@@ -5482,19 +5475,19 @@ machines.
 
 =end original
 
-‘Êý“ö·“ªò“ÞÅ“ª¦“íÞ“ùê“¡¢“«Ó“«Ã“«È’Ã±“êÈ“æÑ“ß©“í­ ("&", "|", "^", "~", "<<", ">>") “ªÏ
-“ßÈ“ªË“ïÚ‘Êý“ªÎ“Ì¿“Íý“ªò“ßæ“à÷“ª·“ªÞ“ª¹(“Ó£“ª· L<Bitwise String Operators> “ªâ
-‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤)“¡£
-“ª·“ª«“ª·“¡¢“ª½“ªì“ªÇ“ªâ C<use integer> “ªÏ“ëò“Ú«“ª¬“ª¢“ªê“ªÞ“ª¹“¡£
-“«Ç“«Õ“«©“«ë“«È“ªÇ“ªÏ“¡¢“ª³“ªì“ªé“ªÎ“Ì¿“Íý“ªÏ“Ý¬‘ºÅ“ªÊ“ª·“ïÚ‘Êý“ªÈ“ª·“ªÆ“ú°’¼á“ªµ“ªì“ªÞ“ª¹“ª¬“¡¢
-C<use integer> “ª¬“êó’¸ú“ªÎ“íÞ“ùê“ªÏ“¡¢“Ý¬‘ºÅ“Üõ“ª­“ïÚ‘Êý“ªÈ“ª·“ªÆ“ú°’¼á“ªµ“ªì“ªÞ“ª¹“¡£
-“ÖÇ“ª¨“ªÐ“¡¢C<~0> “ªÏ“÷×“ßÈ“ÓÞ“ª­“ªÊ“ïÚ‘Êý“ªÎ“ö·“ªÈ“ª·“ªÆ“øÄ’²Á“ªµ“ªì“ªÞ“ª¹“¡£
-“ª·“ª«“ª·“¡¢C<use integer; ~0> “ªÏ 2 “ªÎ“ÜÍ‘Êý“ªÎ“«Þ“«·“«ó“ªÇ“ªÏ C<-1> “ªË“ªÊ“ªê“ªÞ“ª¹“¡£
+“¼ý“ÀÚ“°ª“À» “»ç“¿ë“ÇÒ “°æ“¿ì, “ºñ“Æ®“´Ü“À§“¿¬“»ê“ÀÚ("&", "|", "^", "~", "<<",               
+and ">>")“´Â “Ç×“»ó “Á¤“¼ö“ÀÇ “°á“°ú“¸¦ “»ý“¼º“ÇÕ“´Ï“´Ù(“´Ü L<Bitwise String Operators> “µµ
+“Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä).
+“±×“·¯“³ª, “±×“·¸“´õ“·¡“µµ C<use integer> “´Â “ÀÇ“¹Ì“°¡ “ÀÖ“½À“´Ï“´Ù.
+“±â“º»“Àû“À¸“·Î “ÀÌ“°Í“µé“Àº “°á“°ú“´Â “ºÎ“È£“¾ø“´Â “Á¤“¼ö“·Î“½á “ÇØ“¼®“µÇ“Áö“¸¸
+C<use integer> “°¡ “À¯“È¿“ÇÑ“°æ“¿ì“´Â “ºÎ“È£“ºÙ“Àº“Á¤“¼ö“·Î“½á “ÇØ“¼®“µË“´Ï“´Ù.
+“¿¹“¸¦ “µé“¸é, C<~0>“´Â “º¸“Åë “Å« “Á¤“¼ö“ÀÇ “°ª“À¸“·Î“½á “Æò“°¡“µË“´Ï“´Ù.
+“±×“·¯“³ª C<use integer; ~0>“Àº 2“ÀÇ “º¸“¼ö“ÀÇ “¸Ó“½Å“¿¡“¼­“´Â C<-1>“ÀÌ “µË“´Ï“´Ù.
 
 =head2 Floating-point Arithmetic
 X<floating-point> X<floating point> X<float> X<real>
 
-(“Ý©“ÔÑ“á³‘Êý“ïÃ“æÑ“ß©)
+(“ºÎ“µ¿“¼Ò“¼ö“Á¡“¿¬“»ê) 
 
 =begin original
 
@@ -5506,10 +5499,11 @@ See L<perlfaq4>.
 
 =end original
 
-C<use integer> “ª¬“ïÚ‘Êý“æÑ“ß©“ªò“ð«“Íê“ª¹“ªë“ìé“Û°“¡¢‘Êý“ªò“÷å“ïÒ“ªÎ“ùù“ªÇ“í»“ÔÑ“îÜ“ªË“ü¯“ªá“ª¿“ªê
-“ï·“ªê“Þ×“ªÆ“ª¿“ªê“ª¹“ªë“Ñ¦“Ï°“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
-‘Êý“ªò“ü¯“ªá“ªë“ªË“ªÏ“¡¢sprintf() “ªä printf() “ªò“ÞÅ“ª¦“ªÎ“ª¬“ìé“Ûã“ÊÛ’Ã±“ªÊ“Û°“Ûö“ªÇ“ª¹“¡£
-L<perlfaq4> “ªò‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
+C<use integer> “°¡ “Á¤“¼ö“¿¬“»ê“À» “Á¦“°ø“ÇÏ“´Â “ÇÑ“Æí, “¼ö“¸¦ “Æ¯“Á¤“ÀÇ “ÀÚ“¸´“¼ö“¿¡“¼­
+“ÀÚ“µ¿“Àû“À¸“·Î “¿Ã“¸®“°Å“³ª “¹ö“¸®“°Å“³ª “ÇÏ“´Â “±â“´É“Àº “¾ø“½À“´Ï“´Ù.
+“¼ö“¸¦ “¿Ã“¸®“±â“¿¡“´Â sprintf() “³ª printf() “¸¦ “»ç“¿ë“ÇÏ“´Â “°Í“ÀÌ “Á¦“ÀÏ
+“°£“´Ü“ÇÑ “¹æ“¹ý“ÀÔ“´Ï“´Ù.
+L<perlfaq4> “¸¦ “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä.
 
 =begin original
 
@@ -5519,9 +5513,9 @@ so some corners must be cut.  For example:
 
 =end original
 
-“Ý©“ÔÑ“á³‘Êý“ïÃ‘Êý“ªÏ‘Êý‘Ñ§“íº“ª¬’¼Â‘Êý“ªÈ“û¼“ªÖ“ªâ“ªÎ“ªÎ“ÐÎ“ÞÄ“ªÇ“ª·“ª«“ª¢“ªê“ªÞ“ª»“ªó“¡£
-’¼Â‘Êý“ªÏ“Ý©“ÔÑ“á³‘Êý“ïÃ“ªè“ªê“Ùí“ùÚ“ªË’Â³“ª¯“ªÎ“ªÇ“¡¢“Òý“á´“ÊÇ“ª¬“ü¯“ªá“ªé“ªì“ªÞ“ª¹“¡£
-“ÖÇ:
+“ºÎ“µ¿“¼Ò“¼ö“Á¡“¼ö“´Â “¼ö“ÇÐ“ÀÚ“°¡ “½Ç“¼ö“¶ó“°í “ºÎ“¸£“´Â “°Í“ÀÇ “±Ù“»ç“¹Û“¿¡ “¾ø“½À“´Ï“´Ù.
+“½Ç“¼ö“´Â “ºÎ“µ¿“¼Ò“¼ö“Á¡“º¸“´Ù “¹«“ÇÑ“ÇÏ“°Ô “°è“¼Ó“µÇ“±â“¿¡, “´Ù“¼Ò “Â÷“ÀÌ“°¡ “»ý“±é“´Ï“´Ù.
+“¿¹“Á¦:
 
     printf "%.20g\n", 123456789123456789;
     #        produces 123456789123456784
@@ -5536,11 +5530,11 @@ this topic.
 
 =end original
 
-“Ý©“ÔÑ“á³‘Êý“ïÃ‘Êý“ª¬“Ôõ“ª·“ª¤“ª«“ªÉ“ª¦“ª«“ªò“ªÁ“ªç“ª¦“ªÉ“ÔÒ“ª¸“ª«“ªÉ“ª¦“ª«“ªÇ“Ýï“Îò“ª¹“ªë“ªÎ“ªÏ
-“ª¤“ª¤“«¢“«¤“«Ç“«¢“ªÇ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“¡£
-“ì¤“ù»“ªË“¡¢“ì£“ªÄ“ªÎ“Ý©“ÔÑ“á³‘Êý“ïÃ‘Êý“ª¬“ò¦“ïÒ“ªµ“ªì“ª¿“ùù“ªÞ“ªÇ“Ôõ“ª·“ª¤“ª«“ªÉ“ª¦“ª«“ªò
-“Ýï“Îò“ª¹“ªë(“Ýï“Îò“îÜ“ñì“ª¤)“ó­“à¼“ªÎ“óþ“ªò“ãÆ“ª·“ªÞ“ª¹“¡£
-“ª³“ªÎ“Ùý“ð¹“ªË’´Ø“ª¹“ªë“ªè“ªê’¸·“ÚË“ªÊ“Ðâ“ª¤“ªË“ªÄ“ª¤“ªÆ“ªÏ Knuth, volume II “ªò‘²Î“ðÎ“ª·“ªÆ“ù»“ªµ“ª¤“¡£
+“ºÎ“µ¿“¼Ò“¼ö“Á¡“¼ö“°¡ “°°“Àº“Áö “¾î“¶²“Áö“¸¦ “Á¤“È®“È÷ “°°“Àº“Áö “¾î“¶²“Áö“·Î “ºñ“±³“ÇÏ“´Â “°Í“Àº
+“ÁÁ“Àº “¾Æ“ÀÌ“µð“¾î“°¡ “¾Æ“´Õ“´Ï“´Ù.
+“¾Æ“·¡“¿¡, “µÎ“°³“ÀÇ “ºÎ“µ¿“¼Ò“¼ö“Á¡“ÀÌ “Áö“Á¤“µÈ “ÀÚ“¸´“¼ö“±î“Áö “°°“Àº“Áö“¸¦ “ºñ“±³“ÇÏ“´Â(“ºñ“±³“Àû “¹«“°Å“¿î)
+“Â÷“¼±“ÀÇ “¼±“ÅÃ“À» “³ª“Å¸“³À“´Ï“´Ù.
+“ÀÌ “¹®“Á¦“¿¡ “°ü“ÇØ, “º¸“´Ù “¾ö“¹Ð“ÇÏ“°Ô “´Ù“·ç“°í “ÀÖ“´Â Knuth, volume II “¸¦ “Âü“Á¶“ÇØ“ÁÖ“¼¼“¿ä.
 
     sub fp_equal {
 	my ($X, $Y, $POINTS) = @_;
@@ -5561,12 +5555,12 @@ POSIX can't work with complex numbers.
 
 =end original
 
-POSIX “«â“«¸“«å’¡¼“«ë(Perl “øö“ñÞ“ÛÕ“øÖ“«Ñ“«Ã“«±’¡¼“«¸“ªÎ“ìé“Ý») “ªÏ ceil(), floor() “Ðà“ªÓ
-“ª½“ªÎ“öâ“ªÎ‘Êý‘Ñ§’´Ø‘Êý“ªä“ß²“ÊÇ’´Ø‘Êý“ªò’¼Â‘×°“ª·“ªÆ“ª¤“ªÞ“ª¹“¡£
-Math::Complex “«â“«¸“«å’¡¼“«ë(Perl “øö“ñÞ“ÛÕ“øÖ“«Ñ“«Ã“«±’¡¼“«¸“ªÎ“ìé“Ý»)“ªÏ
-’¼Â‘Êý“ªÈ‘Ðé‘Êý“ªÎ’Î¾“Û°“ªÇ“ÔÑ“íÂ“ª¹“ªë‘Êý‘Ñ§’´Ø‘Êý“ªò“ïÒ“ëù“ª·“ªÆ“ª¤“ªÞ“ª¹“¡£
-Math::Complex “ªÏ POSIX “ªÛ“ªÉ’¸ú“áã“îÜ“ªÇ“ªÏ“ª¢“ªê“ªÞ“ª»“ªó“ª¬“¡¢
-POSIX “ªÏ“ÜÜ“áÈ‘Êý“ªÏ“Ðâ“ª¨“ªÞ“ª»“ªó“¡£
+POSIX “¸ð“µâ (Perl “Ç¥“ÁØ“¹è“Æ÷“ÆÐ“Å°“Áö“ÀÇ “ÀÏ“ºÎ) “´Â ceil(), floor() “¹×
+“±× “¿Ü“ÀÇ “¼ö“ÇÐ“ÇÔ“¼ö“³ª “»ï“°¢“ÇÔ“¼ö“¸¦ “Áö“´Ï“°í “ÀÖ“½À“´Ï“´Ù.
+Math::Complex “¸ð“µâ(Perl “Ç¥“ÁØ“¹è“Æ÷“ÆÐ“Å°“Áö“ÀÇ “ÀÏ“ºÎ)“´Â
+“½Ç“¼ö“¿Í “Çã“¼ö “µÑ“´Ù “µ¿“ÀÛ“ÇÏ“´Â “¼ö“ÇÐ“ÇÔ“¼ö“¸¦ “Á¤“ÀÇ“ÇÏ“°í “ÀÖ“½À“´Ï“´Ù.
+Math::Complex“´Â POSIX “º¸“´Ù “È¿“À²“Àû“ÀÌ“Áö“´Â “¾Ê“Áö“¸¸,
+POSIX“´Â “º¹“¼Ò“¼ö“´Â “Ãë“±Þ“ÇÒ “¼ö “¾ø“½À“´Ï“´Ù.
 
 =begin original
 
@@ -5578,15 +5572,15 @@ need yourself.
 
 =end original
 
-“ÑÑ“ë×“«¢“«×“«ê“«±’¡¼“«·“«ç“«ó“ªË“ªª“ª±“ªë“ü¯“ªá“ªÏ“ä¢“Ê¾“ªÊ“ç¯“úÂ“ªò‘Óë“ª¨“ªë“Ê¦“Òö“àõ“ª¬“ª¢“ªê“¡¢
-“ÞÅ“éÄ“ª¹“ªë“ü¯“ªá“«á“«½“«Ã“«É“ªÏ“ò¦“ïÒ“ªµ“ªì“ª¿“ïñ“Óø“ªÇ“ú¼“ªï“ªì“ªë“ªÙ“ª­“ªÇ“ª¹“¡£
-“ª³“ªÎ“ªè“ª¦“ªÊ“íÞ“ùê“¡¢Perl “ª¬“ÞÅ“éÄ“ª¹“ªë“«·“«¹“«Æ“«à“ü¯“ªá“ªò“ãá“éÄ“ª»“ªº“¡¢
-“ÓÛ“ªï“ªê“ªË“í»“ÝÂ“í»“ãó“ªÇ“ü¯“ªá’´Ø‘Êý“ªò’¼Â‘×°“ª¹“ªë“ªÙ“ª­“ªÇ“ª¹“¡£
+“±Ý“À¶ “¾î“ÇÃ“¸®“ÄÉ“ÀÌ“¼Ç“¿¡ “ÀÇ“ÇÑ “¶ó“¿î“µù“Àº “½É“°¢“ÇÑ “¿µ“Çâ“À» “³¢“Ä¥ “°¡“´É“¼º“ÀÌ “ÀÖ“°í,
+“»ç“¿ë“ÇÏ“´Â “¶ó“¿î“µù “¸Þ“¼Ò“µå“´Â “Áö“Á¤“ÇÑ “Á¤“µµ“¿¡“¼­ “¼ö“Çà“µÇ“¾î“Á®“¾ß “ÇÕ“´Ï“´Ù.
+“ÀÌ“·± “°æ“¿ì, Perl “ÀÌ “»ç“¿ë“ÇÏ“´Â “½Ã“½º“ÅÛ“¶ó“¿î“µù“À» “½Å“¿ë“ÇÏ“Áö “¸ø“ÇÏ“°í,
+“´ë“½Å“¿¡ “ÀÚ“±â“ÀÚ“½Å“ÀÌ “¶ó“¿î“µù“ÇÔ“¼ö“¸¦ “¸¸“µé“¾î“¾ß “ÇÕ“´Ï“´Ù.
 
 =head2 Bigger Numbers
 X<number, arbitrary precision>
 
-(“ªè“ªê“ÓÞ“ª­“ªÊ‘Êý)
+(“º¸“´Ù “Å« “¼ö)
 
 =begin original
 
@@ -5598,10 +5592,10 @@ limited-precision representations.
 
 =end original
 
-“øö“ñÞ“ªÎ Math::BigInt “ªÈ Math::BigFloat “«â“«¸“«å’¡¼“«ë“ªÏ“Òý“ÛÃ“íþ“æÑ“ß©“ªò“ð«“Íê“ª·“¡¢
-“æÑ“ß©“í­“ªò“«ª’¡¼“«Ð’¡¼“«í’¡¼“«É“ª·“ªÞ“ª¹“ª¬“¡¢“ª³“ªì“ªé“ªÏ“úÞ“î¤“ªÎ“ªÈ“ª³“ªí“ª«“ªÊ“ªê’ÃÙ“ª¤“ªÇ“ª¹“¡£
-“Òý“á´“ªÎ“ÖÅ“æ´“ªÈ“ª«“ªÊ“ªê“ªÎ“áÜ“Óø“ªò’µ¾“ßå“ªË“ª·“ªÆ“¡¢“ùù‘Êý“ª¬“ð¤“ùÚ“ªµ“ªì“ªÆ“ª¤“ªë“ª³“ªÈ“ªË“ªè“ªë
-“ª¢“ªê“ª¬“ªÁ“ªÊ“Õª“ªÈ“ª·“úë“ªò“ù­“ª±“ªë“ª³“ªÈ“ª¬“ªÇ“ª­“ªÞ“ª¹“¡£
+“Ç¥“ÁØ“ÀÎ Math::BigInt “¿Í Math::BigFloat “¸ð“µâ“Àº “¸î “¹è“³ª “±ä “¿¬“»ê“À» “Á¦“°ø“ÇÏ“°í,
+“¿¬“»ê“ÀÚ“¸¦ “¿À“¹ö“·Î“µå“ÇÏ“Áö“¸¸, “ÀÌ“°Í“Àº “Çö“Àç“´Â “²Ï “´À“¸³“´Ï“´Ù.
+“´Ù“¼Ò “¿µ“¿ª“°ú “»ó“´ç“ÇÑ “¼Ó“µµ“¸¦ “Èñ“»ý“ÇØ“¼­, “ÁÙ “¼ö“°¡ “Á¦“ÇÑ“µÇ“¾î“ÀÖ“´Â “°Í“¿¡ “ÀÇ“ÇØ
+“Èç“È÷ “ÀÖ“´Â “±¸“¸Û“À» “ÇÇ“ÇÒ “¼ö “ÀÖ“½À“´Ï“´Ù.
 
     use Math::BigInt;
     $x = Math::BigInt->new('123456789123456789');
@@ -5618,10 +5612,10 @@ external C libraries.
 
 =end original
 
-(“«á“«â“«ê“ªÈ CPU “ãÁ“Êà“ªÎ“ªß“ªË“ëî“ðí“ª¹“ªë)“Ùí“ð¤“ùÚ“ª«“Í³“ïÒ“ªÎ“ïñ“Óø“ªÇ“ªÎ“Íª“ß©“ª¬“ªÇ“ª­“ªë
-“«â“«¸“«å’¡¼“«ë“ª¬“ª¤“ª¯“ªÄ“ª«“ª¢“ªê“ªÞ“ª¹“¡£
-“ªµ“ªé“ªË“èâ“Ý» C “«é“«¤“«Ö“«é“«ê“ªò“ÞÅ“ªÃ“ªÆ“ªè“ªê“áÜ“ª¤’¼Â‘×°“ªò“ð«“Íê“ª¹“ªë
-“Þª“øö“ñÞ“ªÎ“«â“«¸“«å’¡¼“«ë“ªâ“ª¢“ªê“ªÞ“ª¹“¡£
+(“¸Þ“¸ð“¸®“¿Í CPU “½Ã“°£“¿¡“¸¸ “ÀÇ“Á¸“ÇÏ“´Â) “¹«“Á¦“ÇÑ “È¤“Àº “°í“Á¤“ÀÇ “Á¤“µµ“¿¡“¼­“ÀÇ “°è“»ê“ÀÌ
+“°¡“´É“ÇÑ “¸ð“µâ“ÀÌ “¸î“°³ “ÀÖ“½À“´Ï“´Ù.
+“°Å“±â“¿¡ “¿Ü“ºÎ C “¶ó“ÀÌ“ºê“·¯“¸®“¸¦ “»ç“¿ë“ÇØ “º¸“´Ù “ºü“¸¥ “½Ç“Çà“À» “Á¦“°ø“ÇÏ“´Â
+“ºñ“Ç¥“ÁØ “¸ð“µâ“µµ “ÀÖ“½À“´Ï“´Ù.
 
 =begin original
 
@@ -5629,7 +5623,7 @@ Here is a short, but incomplete summary:
 
 =end original
 
-“ì¤“ù»“ªÏ“Ó­“ª¤“ªÇ“ª¹“ª¬“Üô“èÇ“îï“ªÊ“«ê“«¹“«È“ªÇ“ª¹“¡£
+“¾Æ“·¡“´Â “Âª“Áö“¸¸ “ºÒ“¿Ï“Àü“ÇÑ “¸®“½º“Æ®“ÀÔ“´Ï“´Ù.
 
 =begin original
 
@@ -5647,17 +5641,17 @@ Here is a short, but incomplete summary:
 
 =end original
 
-	Math::Fraction		9973 / 12967 “ªÎ“ªè“ª¦“ªÊ“¡¢“ÓÞ“ª­“ª¯“ªÆ“Ùí“ð¤“ùÚ“ªÎ“ÝÂ‘Êý
-	Math::String		“Ùþ“í®“Öª“ªò‘Êý“ö·“ªÎ“ªè“ª¦“ªË“Ðâ“ª¦
-	Math::FixedPrecision	“Í³“ïÒ“ïñ“Óø“ªÇ“Íª“ß©“ª¹“ªë
-	Math::Currency		“÷×“ü§“ªÎ“Íª“ß©“éÄ
-	Bit::Vector		(C “ªò“ÞÅ“ªÃ“ªÆ)“«Ó“«Ã“«È“«Ù“«¯“«¿“ªò“áÜ“ª¯“ðÃ“íÂ“ª¹“ªë
-	Math::BigIntFast	“ÓÞ“ª­“ªÊ‘Êý“ªÎ“ª¿“ªá“ªÎ Bit::Vector “ªÎ“«é“«Ã“«Ñ’¡¼
-	Math::Pari		Pari C “«é“«¤“«Ö“«é“«ê“ªØ“ªÎ“«¢“«¯“«»“«¹“ªò“ð«“Íê“ª¹“ªë
-	Math::BigInteger	“èâ“Ý» C “«é“«¤“«Ö“«é“«ê“ªò“ÞÅ“ª¦
-	Math::Cephes		“èâ“Ý»“ªÎ Cephes C “ªò“ÞÅ“ª¦(“ÓÞ“ª­“ªÊ‘Êý“ªÏ“ªÊ“ª·)
-	Math::Cephes::Fraction	Cephes “«é“«¤“«Ö“«é“«ê“ªò“ÞÅ“ªÃ“ª¿“ÝÂ‘Êý
-	Math::GMP		“ª³“ªì“ªâ“èâ“Ý» C “«é“«¤“«Ö“«é“«ê“ªò“ÞÅ“ª¦
+	Math::Fraction		9973 / 12967 “°°“Àº “Å©“¸ç, “¹«“Á¦“ÇÑ“ÀÇ “ºÐ“¼ö 
+	Math::String		“¹®“ÀÚ“¿­“À» “¼ý“ÀÚ“°ª“À¸“·Î “Ãë“±Þ 
+	Math::FixedPrecision	“°í“Á¤“Á¤“µµ“·Î “°è“»ê
+	Math::Currency		“Åë“È­“°è“»ê“¿ë 
+	Bit::Vector		(C “¸¦ “»ç“¿ë)“ºñ“Æ®“º¤“ÅÍ“¸¦ “ºü“¸¥ “¼Ó“µµ“·Î “´Ù“·ë 
+	Math::BigIntFast	“Å« “¼ö“¸¦ “À§“ÇÑ Bit::Vector “ªÎ“·¡“ÆÛ
+	Math::Pari		Pari C “¶ó“ÀÌ“ºê“·¯“¸®“¿¡ “Á¢“±Ù“À» “Á¦“°ø 
+	Math::BigInteger	“¿Ü“ºÎ C “¶ó“ÀÌ“ºê“·¯“¸®“¸¦ “»ç“¿ë
+	Math::Cephes		“¿Ü“ºÎ Cephes C “¸¦ “»ç“¿ë(“Å« “¼ö“´Â “¾ø“À½)
+	Math::Cephes::Fraction	Cephes “¶ó“ÀÌ“ºê“·¯“¸®“¸¦ “»ç“¿ë“ÇÑ “ºÐ“¼ö 
+	Math::GMP		“ÀÌ“°Í“µµ “¿Ü“ºÎ C “¶ó“ÀÌ“ºê“·¯“¸®“¸¦ “»ç“¿ë 
 
 =begin original
 
@@ -5665,7 +5659,7 @@ Choose wisely.
 
 =end original
 
-“ª¦“ªÞ“ª¯“àÔ“ªó“ªÇ“ª¯“ªÀ“ªµ“ª¤“¡£
+“ºÎ“µð “Çö“¸í“ÇÑ “¼±“ÅÃ“À»...
 
 =cut
 
